[package]
name = "mtml-parser"
description = "MTML parser written in Rust."
repository = "https://github.com/usualoma/rust-mtml-parser"
version = "0.0.1"
edition = "2021"
authors = ["Taku Amano <taku@taaas.jp>"]
license = "MIT"

[dependencies]
nom = "7"
nom_locate = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
